<?xml version="1.0" encoding="utf-8" standalone="no"?>
<!--
  ~ Catroid: An on-device visual programming system for Android devices
  ~ Copyright (C) 2010-2018 The Catrobat Team
  ~ (<http://developer.catrobat.org/credits>)
  ~
  ~ This program is free software: you can redistribute it and/or modify
...
    <string name="stage">Stage</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="redo">Redo</string>
    <string name="undo">Undo</string>

    <string name="new_option">new…</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="next">Next</string>
    <string name="back">Back</string>

    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="close">Close</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    
    <string name="select_all">Select all</string>
...
    <string name="marketing_created_with">Created with</string>
    <string name="marketing_app_details">Details about this app</string>
    <string name="marketing_more_on_google_play">More apps on App store</string>

    <!-- Settings activity -->
    <string name="preference_title">Settings</string>
    <string name="preference_title_language">Language</string>
    <string name="preference_description_language">Set the app\'s language</string>

    <string name="preference_title_accessibility">Accessibility</string>
    <string name="preference_description_accessibility">Change the app\'s appearance</string>
    <string name="preference_title_accessibility_profiles">Accessibility profiles</string>
    <string name="preference_title_accessibility_profile">Predefined profiles</string>
    <string name="preference_title_accessibility_profile_headline">Profiles</string>
    <string name="preference_title_accessibility_predefined_profile_headline">Predefined profiles</string>

    <string name="preference_description_accessibility_profiles">Pick a predefined accessibility profile</string>

    <string name="preference_title_accessibility_text_appearance">Text appearance</string>
    <string name="preference_title_accessibility_handling">Handling</string>
    <string name="preference_title_accessibility_category_icons_big">Large icons</string>
...
    <string name="am_unpack">Unpack</string>
    <string name="am_copy">Copy</string>
    <string name="am_delete">Delete</string>
    <string name="am_rename">Rename</string>
    <string name="am_convert">Convert</string>
    <string name="am_merge">Merge</string>
    <string name="dialog_confirm_delete">You can\'t undo this!</string>

    <string name="list_headline_sprites">Actors and objects</string>

    <!-- Options Menu Options -->
    <string name="backpack">Backpack</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="merge">Merge</string>
    <string name="show_details">Show details</string>
    <string name="hide_details">Hide details</string>


...
    <!-- Broadcast spinner -->
    <string name="dialog_new_broadcast_message_title">New message</string>
    <string name="dialog_new_broadcast_message_name">message:</string>
    <!--  -->

    <!-- NFC spinner -->
    <string name="brick_when_nfc_default_all">all</string>
    <!-- -->

    <!-- Brick categories -->
    <string name="categories">Categories</string>
    <string name="category_embroidery">Embroidery</string>
    <string name="category_motion">Motion</string>
...
    <string name="formula_editor_sensor_date_day">day</string>
    <string name="formula_editor_sensor_date_weekday">weekday</string>
    <string name="formula_editor_sensor_time_hour">hour</string>
    <string name="formula_editor_sensor_time_minute">minute</string>
    <string name="formula_editor_sensor_time_second">second</string>

    <string name="preference_title_enable_crash_reports">Sending anonymous crash reports</string>
    <string name="preference_description_crash_reports">Allow the app to send crash reports automatically</string>
    <string name="drone_brick_set_text">Text</string>
    <string name="drone_brick_set_x">X:</string>
    <string name="author">Author:</string>
    <string name="screen_size">Stage size:</string>
    <string name="mode">Mode:</string>
...
    <string name="progress_upload_dialog_show_program">Show project</string>
    <!--  -->

    <!-- Snackbar hints -->
    <string name="got_it">Got it</string>
    <string name="preference_description_hints">Enable to show hints</string>
    <string name="preference_title_enable_hints">Show hints </string>
    <string name="hint_category">All bricks are sorted in categories. Choose the category you are looking for.</string>
    <string name="hint_bricks">To add a brick to your script, tap on the brick you want to use.</string>
    <string name="hint_scripts">The script defines the behavior of your actor or object. To add bricks to the script,
        tap the \"+\" symbol.</string>
    <string name="hint_looks">Here you can find the different appearances of your actor or object. To add a new look,
        tap the \"+\" symbol.</string>
...

    <!-- Crash report dialog -->
    <string name="plus" translatable="false">+</string>
    <!--  -->

    <!-- Multilingual List -->
    <string name="device_language">Your device\'s language</string>

    <!-- Symbols -->
    <string name="percent_symbol">%</string>
    <string name="hertz_symbol">㎐</string>

    <string name="sans_serif_font" translatable="false">sans_serif</string>
...
